--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 },
                 width: '100%',
                 height: '100%',
-                colors: ['#F77F00', '#3B8558', '#FCDD7C', '#545B66', '#2C7865', '#90D26D', '#0ABF85', 
+                colors: ['#211DB1', '#E215E9', '#FB7444', '#545B66', '#2C7865', '#90D26D', '#0ABF85', 
                 '#FF9F66', '#FC4100'], // Custom colors
                 slices: {
                     0: { offset: 0.1 },  // Offset the first slice (Work)
