--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
                 },
                 pieSliceText: 'label',
                 legend: {
-                    position: 'bottom'
+                    position: 'bottom',
+                    textStyle: {
+                        color: "white",
+                        fontSize: 8
+                    }
+                    
                 },
                 width: '100%',
                 height: '100%',
@@ -31,7 +36,8 @@
                     2: { offset: 0.2 },  // Offset the third slice (Commute)
                     // You can continue to add offsets for other slices if needed
                 },
-                backgroundColor: { fill:  'transparent'} // Remove background
+                backgroundColor: { fill:  'transparent'}, // Remove background
+            
             };
 
             function drawBasic() {
