--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 },
                 width: '100%',
                 height: '100%',
-                colors: ['#211DB1', '#E215E9', '#FB7444', '#545B66', '#2C7865', '#90D26D', '#0ABF85', 
+                colors: ['#00B5B9', '#74D173', '#A68161', '#545B66', '#2C7865', '#90D26D', '#0ABF85', 
                 '#FF9F66', '#FC4100'], // Custom colors
                 slices: {
                     0: { offset: 0.1 },  // Offset the first slice (Work)
