--- a/donut.html
+++ b/donut.html
@@ -11,7 +11,7 @@
       height: 100%;
       margin: 0;
       padding: 0;
-      background-color: transparent;
+      background-color:  { fill:  'transparent'};
     }
     #container {
       width: 100%;
