--- a/donut.html
+++ b/donut.html
@@ -74,7 +74,7 @@
         // Disable legend
         chart.legend()
              .enabled(true) // Enable legend if required
-             .position('right')
+             .position('bottom')
              .itemsLayout('vertical')
              .fontColor('#FFFFFF')
              .background().fill('transparent');
