--- a/donut.html
+++ b/donut.html
@@ -75,7 +75,7 @@
         chart.legend()
              .enabled(true) // Enable legend if required
              .position('bottom')
-             .itemsLayout('vertical')
+             .itemsLayout('horizontal')
              .fontColor('#FFFFFF')
              .background().fill('transparent');
 
