--- a/donut.html
+++ b/donut.html
@@ -11,7 +11,7 @@
       height: 100%;
       margin: 0;
       padding: 0;
-      background-color:  { fill:  'transparent'};
+      background-color: #2B2B2B; /* Match chart background */
     }
     #container {
       width: 100%;
@@ -27,13 +27,16 @@
       right: 0;
       width: 100%;
       height: 15%;
-      background-color: transparent;
-      z-index: 10;
+      background-color: #303234; /* Match chart background */
+      z-index: 10; /* Ensure it overlays the chart */
     }
   </style>
 </head>
 <body>
-  <div id="container"></div>
+  <div id="container">
+    <!-- Overlay to hide the watermark -->
+    <div id="overlay"></div>
+  </div>
   <script src="https://cdn.anychart.com/releases/v8/js/anychart-base.min.js"></script>
   <script src="https://cdn.anychart.com/releases/v8/js/anychart-ui.min.js"></script>
   <script src="https://cdn.anychart.com/releases/v8/js/anychart-exports.min.js"></script>
@@ -50,34 +53,25 @@
         // Customize slices
         chart.palette(['#A393D1', '#FFB461', '#FF6F61', '#17A2B8']); // Add more colors if needed
 
-        // Remove title and set properties
+        // Customize chart appearance
         chart.radius('40%') // Adjust radius to make the chart fit smaller containers
              .innerRadius('25%'); // Adjust inner radius for smaller containers
 
-        // Enable labels
-        chart.labels()
-             .position('outside') // Position labels outside the slices
-             .format('{%X}: {%Value}')
-             .fontColor("#FFFFFF")  // Set label color to white
-             .fontWeight('bold');
+        // Set chart title
+        chart.title('سرعة التبليغ')
+             .fontColor('#FFFFFF') // Set title font color to white
+             .fontSize(14);         // Set title font size
 
-        // Set tooltip text color to white
-        chart.tooltip()
-             .titleFormat("{%X}")
-             .format("Value: {%Value}")
-             .background().fill("transparent");
-        chart.tooltip().fontColor("#FFFFFF");
-
-        // Set chart background to transparent
-        chart.background().fill('transparent');
-
-        // Disable legend
+        // Customize the legend
         chart.legend()
-             .enabled(true) // Enable legend if required
-             .position('bottom')
-             .itemsLayout('horizontal')
-             .fontColor('#FFFFFF')
-             .background().fill('transparent');
+             .enabled(true)           // Enable the legend
+             .position('bottom')      // Position legend at the bottom
+             .itemsLayout('horizontal') // Arrange items horizontally
+             .fontColor('#FFFFFF')    // Set legend text color to white
+             .background().fill('transparent'); // Set legend background to transparent
+
+        // Set background color to transparent
+        chart.background().fill('transparent');
 
         // Set container id
         chart.container('container');
@@ -100,11 +94,14 @@
       // Check if data is received
       if (!sasData || !sasData.data || sasData.data.length === 0) {
         console.warn("No data received from SAS VA or data is in incorrect format.");
+        // Draw chart with default data
         drawOrUpdateChart([{ x: "No Data", value: 1 }]);
         return;
       }
 
       let data = sasData.data;
+
+      // Assuming 'حالة البلاغ' is the only variable assigned
       let categoryIndex = 0;
 
       // Prepare data: Count frequencies of each category
