--- a/donut.html
+++ b/donut.html
@@ -74,8 +74,8 @@
         // Disable legend
         chart.legend()
              .enabled(true) // Enable legend if required
-             .position('right')
-             .itemsLayout('vertical')
+             .position('bottom')
+             .itemsLayout('horizontal')
              .fontColor('#FFFFFF')
              .background().fill('transparent');
 
