--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 chartArea: {
                     left: 50,
                     bottom: 50,
-                    width: '120%',
-                    height: '120%'
+                    width: '100%',
+                    height: '100%'
                 },
                 pieSliceText: 'label',
                 legend: {
@@ -105,6 +105,12 @@
                 }
             }
         </script>
+         <style>
+            #chart_div {
+                width: 800px;
+                height: 800px;
+            }
+        </style>
     </head>
     <body>
         <div id="chart_div"></div>
